makko/monitoring/prometheus/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "prometheus.senk0.com"
  rules:
    - backendRefs:
        - name: prometheus
          port: 9090
